Try some style in the images

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -11,7 +11,12 @@
       <h1>My Portfolio</h1>
       <p>This is my portfolio.</p>
       <p>Click here to get a random message:</p>
-      <img src="/images/yo.jpg">
+
+      <div id="imgContainer" class="imgContainer">
+        <img width="500px" height="500px" src="/images/yo.jpg">
+        <img width="500px" height="500px" src="/images/yo2.jpg">
+      </div>
+
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
     </div>
