Fetch the message

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -38,8 +38,8 @@
           I'm studying Robotics in Tecnologico de Monterrey in Mexico, one of my mainn hobbies is dance.
       </p>
 
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <button onclick="getMessageUsingArrowFunctions()">Get a message</button>
+      <div id="message-container"></div>
     </div>
   </body>
 </html>
