--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -38,8 +38,22 @@
           I'm studying Robotics in Tecnologico de Monterrey in Mexico, one of my mainn hobbies is dance.
       </p>
 
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
+      <div id="writeYourComment">
+        <form action="/data" method="POST">
+
+            <p>Write your comment below:</p>
+            
+
+            <p>Comment:</p>
+            <textarea name="comment"></textarea>
+            <br/><br/>
+
+            <input type="submit" />
+        </form>
+      </div>
+
+      <button onclick="getMessageUsingArrowFunctions()">Get a message</button>
+      <div id="message-container"></div>
     </div>
   </body>
 </html>
