--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -56,5 +56,11 @@
       <button onclick="getMessageUsingArrowFunctions()">Get a message</button>
       <div id="message-container"></div>
     </div>
+
+    <div id="map"></div>
+
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtM1Vf4iDDY_ALVp-xlpXu7HJ6xxCXjVQ&callback=initMap">
+    </script>
   </body>
 </html>
