Change marker icons and interact with the images.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -13,8 +13,8 @@
       <p>The last semester I was in a study abroad program and these pictures are some of those beutiful moments that I had in South California.:</p>
 
       <div id="imgContainer" class="imgContainer">
-        <img width="500px" height="600px" src="/images/yo.jpg">
-        <img width="600px" height="600px" src="/images/yo2.jpg">
+        <img onclick="addMarker(0)" width="500px" height="600px" src="/images/yo.jpg">
+        <img onclick="addMarker(1)" width="600px" height="600px" src="/images/yo2.jpg">
       </div>
 
       <div>
