--- a/portfolioManager/src/main/webapp/index.html
+++ b/portfolioManager/src/main/webapp/index.html
@@ -2,65 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Portfolio</title>
+    <title>Portfolio Manger</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>The last semester I was in a study abroad program and these pictures are some of those beutiful moments that I had in South California.:</p>
-
-      <div id="imgContainer" class="imgContainer">
-        <img onclick="addMarker(0)" width="500px" height="600px" src="/images/yo.jpg">
-        <img onclick="addMarker(1)" width="600px" height="600px" src="/images/yo2.jpg">
-      </div>
-
-      <div>
-        <b>Some projects in which I have work:</b>
-        <ul>
-            <li>Fails prediction system for banking and retail industry</li>
-            <li>Crawlers of Legal data</li>
-            <li>Automation systems</li>
-        </ul>
-      </div>
-
-      <div>
-        <b>You can reach me out in:</b>
-        <ul>
-            <li><a href="https://github.com/EduardoSantos7">Github</a></li>
-            <li><a href="https://www.linkedin.com/in/eduardosantosdelgado/">LinkedIn</a></li>
-        </ul>
-      </div>
-
-      <p>
-          I'm studying Robotics in Tecnologico de Monterrey in Mexico, one of my mainn hobbies is dance.
-      </p>
-
-
-      <div id="writeYourComment">
-        <form action="/data" method="POST">
-
-            <p>Write your comment below:</p>
-            
-
-            <p>Comment:</p>
-            <textarea name="comment"></textarea>
-            <br/><br/>
-
-            <input type="submit" />
-        </form>
-      </div>
- 
-      <button onclick="getMessageUsingArrowFunctions()">Get a message</button>
-      <div id="message-container"></div>
     </div>
-
-    <div id="map"></div>
-
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtM1Vf4iDDY_ALVp-xlpXu7HJ6xxCXjVQ&callback=initMap">
-    </script>
   </body>
 </html>
