--- a/portfolioManager/src/main/webapp/index.html
+++ b/portfolioManager/src/main/webapp/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <title>Portfolio Manger</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   </head>
-  <body>
+  <body onload ="addNews()">
     <div id="content">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Portfolio Manager</a>
@@ -55,6 +55,7 @@
               <div class="card-body">
                 <h5 class="card-title">Invested</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <div id="chart-container"></div>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
@@ -68,6 +69,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Special title treatment</h5>
                   <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <div id="chart_div"></div>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -79,6 +81,7 @@
                 </div>
                 <div class="card-body">
                   <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <div id="news_div"></div>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
