--- a/portfolioManager/src/main/webapp/index.html
+++ b/portfolioManager/src/main/webapp/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="script.js"></script>
+    <script src="news.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -47,7 +48,8 @@
       </nav>
       <div id="chartsContainer" class="p-3 m-3">
         <div class="row">
-          <div class="col-7">
+          <div class="col">
+            <div class="row">
             <div class="card">
               <div class="card-header">
                 My Portfolio
@@ -58,9 +60,9 @@
                 <div id="chart-container"></div>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
+            
             </div>
-          </div>
-          <div class="col">
+            </div>
             <div class="row">
               <div class="card">
                 <div class="card-header">
@@ -74,13 +76,14 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="col">
             <div class="row">
               <div class="card">
                 <div class="card-header">
                   News
                 </div>
                 <div class="card-body">
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                   <div id="news_div"></div>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
