Getting Company name

--- a/portfolioManager/src/main/webapp/index.html
+++ b/portfolioManager/src/main/webapp/index.html
@@ -26,27 +26,18 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">My Portfolio</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Account
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Log out</a>
-              </div>
-            </li>
           </ul>
-          <form class="form-inline">
-            <input class="form-control " type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success " type="submit">Search</button>
+          <form>
+            <input id="companyInput" class="form-control " type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success " type="submit" onclick="AddCompany()">Search</button>
           </form>
         </div>
       </nav>
+      <div class="card">
+        <div id="companiesBox" class="card-body">
+          Here, companies!
+        </div>
+      </div>
       <div id="chartsContainer" class="p-3 m-3">
         <div class="row">
           <div class="col">
