Getting name and id company data

--- a/portfolioManager/src/main/webapp/index.html
+++ b/portfolioManager/src/main/webapp/index.html
@@ -29,11 +29,11 @@
           </ul>
           <form>
             <input id="companyInput" class="form-control " type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success " type="submit" onclick="AddCompany()">Search</button>
+            <button class="btn btn-outline-success " onclick="AddCompany()">Search</button>
           </form>
         </div>
       </nav>
-      <div class="card">
+      <div class="card p-2">
         <div id="companiesBox" class="card-body">
           Here, companies!
         </div>
