--- a/portfolioManager/src/main/webapp/index.html
+++ b/portfolioManager/src/main/webapp/index.html
@@ -33,7 +33,7 @@
           </form>
         </div>
       </nav>
-      <div class="card p-2">
+      <div class="card m-2">
         <div id="companiesBox" class="card-body">
           Here, companies!
         </div>
