--- a/portfolioManager/src/main/webapp/index.html
+++ b/portfolioManager/src/main/webapp/index.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
             </li>
           </ul>
-          <form>
+          <form class="form-inline">
             <input id="companyInput" class="form-control " type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success " onclick="AddCompany()">Search</button>
           </form>
